# pcl2gridcolor

./: CMakeLists.txt  MapPoints.txt  README.md
data/: ldso_kitti00.quadtree
quadtree_Astar/: README.md  astar.py  demo.py  mapgen.py  quadtree  quadtree.py
src/: gridmap_loader.py  load.py  pclgrid_converter.py  remove_outlier.cc  test.cpp  test.py
